syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "arcs/internal/models/proto";

message SMS {
  string id = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;
  string order_id = 4;
  string destination = 5;
  string status = 6;
}